--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     },
     "dependencies": {
         "@hapi/hapi": "^20.2.1",
+        "@hapi/jwt": "^2.1.1",
         "auto-bind": "^4.0.0",
+        "bcrypt": "^5.0.1",
         "dotenv": "^16.0.0",
         "joi": "^17.6.0",
         "nanoid": "^3.3.2",
